# django-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
admin-frontend/: index.html  package-lock.json  package.json  vite.config.ts
admin-frontend/src/: App.tsx
admin-frontend/src/api/: client.ts
admin-frontend/src/components/: AdminLayout.tsx  Breadcrumbs.tsx  ConfirmDialog.tsx  ErrorAlert.tsx  FormField.tsx  LoadingSpinner.tsx  Pagination.tsx  Sidebar.tsx  ToastContainer.tsx  TopBar.tsx
admin-frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
admin-frontend/src/hooks/: useAdminApi.ts
admin-frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  ModelCreatePage.tsx  ModelEditPage.tsx  ModelListPage.tsx  NotFoundPage.tsx
admin-frontend/src/types/: api.ts
crates/django-rs-admin/: Cargo.toml
crates/django-rs-admin/src/: actions.rs  api.rs  db.rs  filters.rs  lib.rs  log_entry.rs  model_admin.rs  site.rs
crates/django-rs-admin/src/contrib/: contenttypes.rs  humanize.rs  messages.rs  mod.rs  sitemaps.rs  staticfiles.rs
crates/django-rs-admin/tests/: admin_integration.rs
crates/django-rs-auth/: Cargo.toml
crates/django-rs-auth/src/: backends.rs  csrf.rs  forms.rs  hashers.rs  lib.rs  permissions.rs  security.rs  session_auth.rs  user.rs  views.rs
crates/django-rs-auth/tests/: auth_session_integration.rs  integration_tests.rs
crates/django-rs-cli/: Cargo.toml
crates/django-rs-cli/src/: cache.rs  command.rs  email.rs  files.rs  lib.rs  serialization.rs
crates/django-rs-cli/src/commands/: check.rs  collectstatic.rs  createsuperuser.rs  dumpdata.rs  findstatic.rs  flush.rs  inspectdb.rs  loaddata.rs  makemigrations.rs  migrate.rs  mod.rs  runserver.rs  showmigrations.rs  sqlflush.rs  sqlmigrate.rs  test_cmd.rs
crates/django-rs-core/: Cargo.toml
crates/django-rs-core/src/: apps.rs  checks.rs  error.rs  i18n.rs  lib.rs  logging.rs  settings.rs  settings_loader.rs  signing.rs
crates/django-rs-core/src/i18n/: catalog.rs  lazy.rs  timezone.rs
crates/django-rs-core/src/utils/: lazy.rs  mod.rs  multi_value_dict.rs  text.rs
crates/django-rs-db/: Cargo.toml
crates/django-rs-db-backends/: Cargo.toml
crates/django-rs-db-backends/src/: base.rs  lib.rs  mysql.rs  postgresql.rs  sqlite.rs
crates/django-rs-db-backends/tests/: orm_execution.rs  orm_integration_extended.rs
crates/django-rs-db-migrations/: Cargo.toml
crates/django-rs-db-migrations/src/: autodetect.rs  executor.rs  lib.rs  loader.rs  migration.rs  operations.rs  schema_editor.rs  serializer.rs  squash.rs
crates/django-rs-db-migrations/tests/: integration_tests.rs
crates/django-rs-db/src/: constraints.rs  executor.rs  lib.rs  model.rs  router.rs  transactions.rs  validators.rs  value.rs
crates/django-rs-db/src/fields/: mod.rs  types.rs
crates/django-rs-db/src/query/: bulk.rs  compiler.rs  custom_lookups.rs  expressions.rs  lookups.rs  mod.rs  queryset.rs  raw.rs
crates/django-rs-db/src/query/expressions/: core.rs  functions.rs  mod.rs  search.rs  subquery.rs  window.rs
crates/django-rs-forms/: Cargo.toml
crates/django-rs-forms/src/: bound_field.rs  fields.rs  form.rs  formset.rs  lib.rs  model_form.rs  validation.rs  widgets.rs
crates/django-rs-forms/tests/: form_integration.rs
crates/django-rs-http/: Cargo.toml
crates/django-rs-http/src/: cookies.rs  lib.rs  querydict.rs  request.rs  response.rs  upload.rs
crates/django-rs-http/src/urls/: converters.rs  mod.rs  pattern.rs  resolver.rs  reverse.rs
crates/django-rs-macros/: Cargo.toml
crates/django-rs-macros/src/: admin.rs  form.rs  lib.rs  model.rs  string_list.rs  urls.rs  utils.rs
crates/django-rs-macros/tests/: test_admin_derive.rs  test_form_derive.rs  test_model_derive.rs
crates/django-rs-signals/: Cargo.toml
crates/django-rs-signals/src/: lib.rs
crates/django-rs-signals/tests/: signal_integration.rs
crates/django-rs-template/: Cargo.toml
crates/django-rs-template/src/: context.rs  context_processors.rs  engine.rs  filters.rs  include.rs  inheritance.rs  lexer.rs  lib.rs  library.rs  loaders.rs  parser.rs  tags.rs
crates/django-rs-test/: Cargo.toml
crates/django-rs-test/src/: assert_queries.rs  client.rs  framework.rs  lib.rs  live_server.rs  mail_outbox.rs  override_settings.rs  request_factory.rs  test_database.rs
crates/django-rs-test/tests/: e2e_pipeline.rs  security_e2e.rs
crates/django-rs-views/: Cargo.toml
crates/django-rs-views/src/: lib.rs  pagination.rs  server.rs  session.rs
crates/django-rs-views/src/contrib/: flatpages.rs  mod.rs  redirects.rs  sites.rs  syndication.rs
crates/django-rs-views/src/middleware/: builtin.rs  mod.rs
crates/django-rs-views/src/views/: archive.rs  class_based.rs  form_view.rs  function.rs  generic.rs  mod.rs
crates/django-rs-views/tests/: integration.rs  middleware_integration.rs
django-rs/: Cargo.toml
django-rs/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/reference/: indexes-and-constraints.md  migrations.md  models-and-fields.md  querysets.md  settings-and-cli.md  signals.md
docs/src/tutorial/: 01-getting-started.md  02-models-and-admin.md  03-views-and-templates.md  04-forms-and-validation.md  05-testing.md
examples/blog/: Cargo.toml  blog.toml
examples/blog/src/: main.rs  models.rs  settings.rs  urls.rs  views.rs
examples/blog/templates/: base.html  post_detail.html  post_list.html
