[workspace]
resolver = "2"
members = [
    "django-rs",
    "crates/django-rs-core",
    "crates/django-rs-macros",
    "crates/django-rs-db",
    "crates/django-rs-db-backends",
    "crates/django-rs-db-migrations",
    "crates/django-rs-http",
    "crates/django-rs-views",
    "crates/django-rs-forms",
    "crates/django-rs-template",
    "crates/django-rs-auth",
    "crates/django-rs-admin",
    "crates/django-rs-signals",
    "crates/django-rs-cli",
    "crates/django-rs-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/django-rs"
description = "A full-featured Django equivalent web framework for Rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
http = "1"
http-body-util = "0.1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Database drivers
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"
rusqlite = { version = "0.32", features = ["bundled"] }
mysql_async = "0.34"
# Template
tera = "1"
# Password hashing
argon2 = "0.5"
bcrypt = "0.16"
# Crypto
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
# Time
chrono = { version = "0.4", features = ["serde"] }
# UUID
uuid = { version = "1", features = ["v4", "serde"] }
# CLI
clap = { version = "4", features = ["derive"] }
# Regex
regex = "1"
# URL encoding
url = "2"
percent-encoding = "2"
# Proc macros
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"
# Testing
tokio-test = "0.4"
# Misc
once_cell = "1"

# Internal crates
django-rs-core = { path = "crates/django-rs-core" }
django-rs-macros = { path = "crates/django-rs-macros" }
django-rs-db = { path = "crates/django-rs-db" }
django-rs-db-backends = { path = "crates/django-rs-db-backends" }
django-rs-db-migrations = { path = "crates/django-rs-db-migrations" }
django-rs-http = { path = "crates/django-rs-http" }
django-rs-views = { path = "crates/django-rs-views" }
django-rs-forms = { path = "crates/django-rs-forms" }
django-rs-template = { path = "crates/django-rs-template" }
django-rs-auth = { path = "crates/django-rs-auth" }
django-rs-admin = { path = "crates/django-rs-admin" }
django-rs-signals = { path = "crates/django-rs-signals" }
django-rs-cli = { path = "crates/django-rs-cli" }
django-rs-test = { path = "crates/django-rs-test" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
