[package]
name = "django-rs-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication and authorization for django-rs: Users, Permissions, Groups, Sessions"

[lints]
workspace = true

[dependencies]
django-rs-core.workspace = true
django-rs-http.workspace = true
django-rs-db.workspace = true
django-rs-views.workspace = true
argon2.workspace = true
bcrypt.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
http.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
