[package]
name = "django-rs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, settings, app registry, signals, and error types for django-rs"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
once_cell.workspace = true
regex.workspace = true
