[package]
name = "django-rs-db-backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Database backends for django-rs: PostgreSQL, MySQL, and SQLite drivers"

[lints]
workspace = true

[features]
default = []
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
sqlite = ["dep:rusqlite"]
mysql = ["dep:mysql_async"]

[dependencies]
django-rs-core.workspace = true
django-rs-db.workspace = true
tokio.workspace = true
tokio-postgres = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
mysql_async = { workspace = true, optional = true }
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
