[package]
name = "django-rs-db-migrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Migration engine for django-rs: schema migrations, auto-detection, and management"

[lints]
workspace = true

[dependencies]
django-rs-core.workspace = true
django-rs-db.workspace = true
django-rs-db-backends.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
