[package]
name = "django-rs-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ORM layer for django-rs: Model definitions, QuerySet, Manager, and expressions"

[lints]
workspace = true

[dependencies]
django-rs-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
