[package]
name = "django-rs-forms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Forms framework for django-rs: Forms, ModelForms, widgets, and validation"

[lints]
workspace = true

[dependencies]
django-rs-core.workspace = true
django-rs-http.workspace = true
django-rs-db.workspace = true
django-rs-template.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
