[package]
name = "django-rs-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for the django-rs framework (models, views, forms, etc.)"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true
