[package]
name = "django-rs-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for the django-rs framework (models, views, forms, etc.)"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true

[dev-dependencies]
django-rs-core.workspace = true
django-rs-db.workspace = true
django-rs-forms.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
