[package]
name = "django-rs-template"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Template engine for django-rs: DTL-compatible template rendering"

[lints]
workspace = true

[dependencies]
django-rs-core.workspace = true
django-rs-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
regex.workspace = true
percent-encoding.workspace = true
rand.workspace = true
