[package]
name = "django-rs-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing framework for django-rs: test client, fixtures, assertions, and database test utilities"

[lints]
workspace = true

[dependencies]
django-rs-core.workspace = true
django-rs-http.workspace = true
django-rs-db.workspace = true
django-rs-views.workspace = true
tokio.workspace = true
tokio-test.workspace = true
