[package]
name = "django-rs-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing framework for django-rs: test client, fixtures, assertions, and database test utilities"

[lints]
workspace = true

[dependencies]
django-rs-core.workspace = true
django-rs-http.workspace = true
django-rs-views.workspace = true
django-rs-db.workspace = true
django-rs-db-backends.workspace = true
django-rs-auth.workspace = true
axum.workspace = true
hyper.workspace = true
http.workspace = true
http-body-util.workspace = true
tower.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
