[package]
name = "django-rs-views"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "View layer for django-rs: class-based views, generic views, and middleware"

[lints]
workspace = true

[dependencies]
django-rs-core.workspace = true
django-rs-http.workspace = true
django-rs-template.workspace = true
django-rs-db.workspace = true
django-rs-forms.workspace = true
axum.workspace = true
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
flate2.workspace = true
tracing.workspace = true
rand.workspace = true
percent-encoding.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
