[package]
name = "blog-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
django-rs-core = { path = "../../crates/django-rs-core" }
django-rs-db = { path = "../../crates/django-rs-db" }
django-rs-http = { path = "../../crates/django-rs-http" }
django-rs-template = { path = "../../crates/django-rs-template" }
django-rs-cli = { path = "../../crates/django-rs-cli" }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
http = "1"
